[gd_scene load_steps=10 format=2]

[ext_resource path="res://Main 2.gd" type="Script" id=1]
[ext_resource path="res://Material freeway/wallpaperfreeway.png" type="Texture" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player2.tscn" type="PackedScene" id=4]
[ext_resource path="res://LinhaChegada.tscn" type="PackedScene" id=5]
[ext_resource path="res://Material freeway/sons/tema.wav" type="AudioStream" id=6]
[ext_resource path="res://Material freeway/sons/ponto.wav" type="AudioStream" id=7]
[ext_resource path="res://Material freeway/sons/ganhou.wav" type="AudioStream" id=8]
[ext_resource path="res://Hud2.tscn" type="PackedScene" id=9]

[node name="Main 2" type="Node"]
script = ExtResource( 1 )

[node name="Pista" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 438, 683 )

[node name="Player2" parent="." instance=ExtResource( 4 )]
position = Vector2( 759, 683 )

[node name="LinhaChegada" parent="." instance=ExtResource( 5 )]
position = Vector2( 646, 67 )
scale = Vector2( 0.910221, 1 )

[node name="TimerCarrosRapidos" type="Timer" parent="."]
autostart = true

[node name="TimerCarrosLentos" type="Timer" parent="."]
autostart = true

[node name="AudioTema" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 673.781, 46.7275 )
stream = ExtResource( 6 )

[node name="AudioPonto" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="AudioVitoria" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="Hud2" parent="." instance=ExtResource( 9 )]

[connection signal="pontua" from="Player" to="." method="_on_Player_pontua"]
[connection signal="pontua2" from="Player2" to="." method="_on_Player2_pontua2"]
[connection signal="timeout" from="TimerCarrosRapidos" to="." method="_on_TimerCarrosRapidos_timeout"]
[connection signal="timeout" from="TimerCarrosLentos" to="." method="_on_TimerCarrosLentos_timeout"]
[connection signal="reinicia" from="Hud2" to="." method="_on_Hud2_reinicia"]
